Add basic clang support
For now it's just a buildkernel.conf option that will export the
required environment variables to use clang to compile the kernel.

This does allow compiling the kernel with LTO which only supports the
clang compiler.

--- a/buildkernel.conf
+++ b/buildkernel.conf
@@ -99,6 +99,10 @@
 # enabled).
 #DISABLE_LVM=1
 
+# Enable if you wish to use clang to compile the kernel
+# which enables building the kernel with LTO, or THINLTO. (Default is 0)
+#USE_CLANG=0
+
 # if you need to conform the config file for some reason, uncomment this
 # hook function and fill it out to suit your requirements
 # NB you should only really need to do this to override a setting forced
