Allow changing initramfs compression types

--- a/buildkernel.conf
+++ b/buildkernel.conf
@@ -75,6 +75,10 @@
 # uncompressed ramfs, even though the enclosing kernel is itself compressed
 #COMPRESSINITRAMFS=0
 
+# If COMPRESSINITRAMFS is enabled you can select which compression type to use.
+# Valid options are GZIP, BZIP2, LZMA, XZ, LZO, LZ4, and ZSTD.
+# COMPRESSINITRAMFS_TYPE="XZ"
+
 # you can manually set the filesystem type for your root partition here.
 # however, doing so should not be necessary.
 #CMDLINE_ROOTFSTYPE="ext4"
