Allow enabling LTO if USE_CLANG is enabled.

--- a/buildkernel.conf
+++ b/buildkernel.conf
@@ -107,6 +107,10 @@
 # which enables building the kernel with LTO, or THINLTO. (Default is 0)
 #USE_CLANG=0
 
+# If USE_CLANG is enabled you can enable LTO.
+# Valid options are "FULL", "THIN", "NONE". Default is "THIN"
+#CLANG_LTO="THIN"
+
 # if you need to conform the config file for some reason, uncomment this
 # hook function and fill it out to suit your requirements
 # NB you should only really need to do this to override a setting forced
